@@ -4,7 +4,6 @@ import (
 	"sync"
 
 	"github.com/gdamore/tcell/v2"
-	"github.com/lucasb-eyer/go-colorful"
 )
 
 // Button is labeled box that triggers an action when selected.
@@ -37,24 +36,13 @@ type Button struct {
 func NewButton(label string) *Button {
 	box := NewBox()
 	box.SetRect(0, 0, TaggedStringWidth(label)+4, 1)
-	bg := Styles.PrimaryTextColor
-	if bg == tcell.ColorDefault {
-		r, g, b := Styles.InverseTextColor.RGB()
-		c := colorful.Color{R: float64(r) / 255, G: float64(g) / 255, B: float64(b) / 255}
-		_, _, li := c.Hcl()
-		if li < .5 {
-			bg = tcell.ColorWhite.TrueColor()
-		} else {
-			bg = tcell.ColorBlack.TrueColor()
-		}
-	}
-	box.SetBackgroundColor(bg)
+	box.SetBackgroundColor(Styles.ContrastBackgroundColor)
 	return &Button{
 		Box:                    box,
 		label:                  []byte(label),
-		labelColor:             Styles.InverseTextColor,
+		labelColor:             Styles.PrimaryTextColor,
 		labelColorFocused:      Styles.PrimaryTextColor,
-		backgroundColorFocused: Styles.ContrastBackgroundColor,
+		backgroundColorFocused: Styles.MoreContrastBackgroundColor,
 	}
 }
 
