@@ -18,7 +18,7 @@ The [black:red]tags [black:green]look [black:yellow]like [::u]this:
 [#00ff00[]`
 
 // Colors demonstrates how to use colors.
-func Colors(nextSlide func()) (title string, content cview.Primitive) {
+func Colors(nextSlide func()) (title string, info string, content cview.Primitive) {
 	tv := cview.NewTextView()
 	tv.SetBorder(true)
 	tv.SetTitle("A [red]c[yellow]o[green]l[darkcyan]o[blue]r[darkmagenta]f[red]u[yellow]l[white] [black:red]c[:yellow]o[:green]l[:darkcyan]o[:blue]r[:darkmagenta]f[:red]u[:yellow]l[white:] [::bu]title")
@@ -29,5 +29,5 @@ func Colors(nextSlide func()) (title string, content cview.Primitive) {
 		nextSlide()
 	})
 
-	return "Colors", Center(44, 16, tv)
+	return "Colors", "", Center(44, 16, tv)
 }
