@@ -8,12 +8,12 @@ import (
 )
 
 // End shows the final slide.
-func End(nextSlide func()) (title string, content cview.Primitive) {
+func End(nextSlide func()) (title string, info string, content cview.Primitive) {
 	textView := cview.NewTextView()
 	textView.SetDoneFunc(func(key tcell.Key) {
 		nextSlide()
 	})
 	url := "https://code.rocketnine.space/tslocum/cview"
 	fmt.Fprint(textView, url)
-	return "End", Center(len(url), 1, textView)
+	return "End", "", Center(len(url), 1, textView)
 }
