@@ -30,12 +30,12 @@ const inputField = `[green]package[white] main
 }`
 
 // InputField demonstrates the InputField.
-func InputField(nextSlide func()) (title string, content cview.Primitive) {
+func InputField(nextSlide func()) (title string, info string, content cview.Primitive) {
 	input := cview.NewInputField()
 	input.SetLabel("Enter a number: ")
 	input.SetAcceptanceFunc(cview.InputFieldInteger)
 	input.SetDoneFunc(func(key tcell.Key) {
 		nextSlide()
 	})
-	return "InputField", Code(input, 30, 1, inputField)
+	return "InputField", "", Code(input, 30, 1, inputField)
 }
