@@ -248,7 +248,7 @@ const tableSelectCell = `[green]func[white] [yellow]main[white]() {
 }`
 
 // Table demonstrates the Table.
-func Table(nextSlide func()) (title string, content cview.Primitive) {
+func Table(nextSlide func()) (title string, info string, content cview.Primitive) {
 	table := cview.NewTable()
 	table.SetFixed(1, 1)
 	for row, line := range strings.Split(tableData, "\n") {
@@ -378,5 +378,5 @@ func Table(nextSlide func()) (title string, content cview.Primitive) {
 	flex.AddItem(subFlex, 0, 1, true)
 	flex.AddItem(code, codeWidth, 1, false)
 
-	return "Table", flex
+	return "Table", "", flex
 }
