@@ -151,14 +151,14 @@ func NewForm() *Form {
 		Box:                          box,
 		itemPadding:                  1,
 		labelColor:                   Styles.SecondaryTextColor,
-		fieldBackgroundColor:         Styles.MoreContrastBackgroundColor,
-		fieldBackgroundColorFocused:  Styles.ContrastBackgroundColor,
-		fieldTextColor:               Styles.InverseTextColor,
-		fieldTextColorFocused:        Styles.InverseTextColor,
-		buttonBackgroundColor:        Styles.MoreContrastBackgroundColor,
-		buttonBackgroundColorFocused: Styles.ContrastBackgroundColor,
-		buttonTextColor:              Styles.InverseTextColor,
-		buttonTextColorFocused:       Styles.InverseTextColor,
+		fieldBackgroundColor:         Styles.ContrastBackgroundColor,
+		fieldBackgroundColorFocused:  Styles.MoreContrastBackgroundColor,
+		fieldTextColor:               Styles.PrimaryTextColor,
+		fieldTextColorFocused:        Styles.PrimaryTextColor,
+		buttonBackgroundColor:        Styles.ContrastBackgroundColor,
+		buttonBackgroundColorFocused: Styles.MoreContrastBackgroundColor,
+		buttonTextColor:              Styles.PrimaryTextColor,
+		buttonTextColorFocused:       Styles.PrimaryTextColor,
 		labelColorFocused:            ColorUnset,
 	}
 
