@@ -144,10 +144,10 @@ func NewInputField() *InputField {
 	return &InputField{
 		Box:                                     NewBox(),
 		labelColor:                              Styles.SecondaryTextColor,
-		fieldBackgroundColor:                    Styles.PrimaryTextColor,
-		fieldBackgroundColorFocused:             Styles.ContrastBackgroundColor,
-		fieldTextColor:                          Styles.ContrastPrimaryTextColor,
-		fieldTextColorFocused:                   Styles.ContrastPrimaryTextColor,
+		fieldBackgroundColor:                    Styles.ContrastBackgroundColor,
+		fieldBackgroundColorFocused:             Styles.MoreContrastBackgroundColor,
+		fieldTextColor:                          Styles.PrimaryTextColor,
+		fieldTextColorFocused:                   Styles.PrimaryTextColor,
 		placeholderTextColor:                    Styles.ContrastSecondaryTextColor,
 		autocompleteListTextColor:               Styles.PrimitiveBackgroundColor,
 		autocompleteListBackgroundColor:         Styles.MoreContrastBackgroundColor,
